Added unit and integration test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.error.include-message=always
 server.error.include-binding-errors=always
-spring.datasource.url=jdbc:postgresql://aa18ik3bk4pijmq.cmwxjzgipk1h.eu-west-2.rds.amazonaws.com:5432/springbootdemo
+spring.datasource.url=jdbc:postgresql://aahn2gr62zy97v.cmwxjzgipk1h.eu-west-2.rds.amazonaws.com:5432/springbootdemo
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=mtservice
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
