--- a/elasticbeanstalk/docker-compose.yml
+++ b/elasticbeanstalk/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   backend:
-    image: "mantikling/spring-react-fullstack:5"
+    image: "mantikling/spring-react-fullstack:latest"
     ports:
       - "80:8080"
     restart: "always"
