--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.error.include-message=always
 server.error.include-binding-errors=always
-spring.datasource.url=jdbc:postgresql://aahn2gr62zy97v.cmwxjzgipk1h.eu-west-2.rds.amazonaws.com:5432/springbootdemo
+spring.datasource.url=jdbc:postgresql://aawfx4esiew4mh.cmwxjzgipk1h.eu-west-2.rds.amazonaws.com:5432/springbootdemo
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=mtservice
 spring.datasource.password=password
